# mail-article

./: .env.example  .gitignore  README.md  config.example.json  pyproject.toml
.github/workflows/: daily.yml
src/zotero_digest/: __init__.py  config.py  digest.py  emailer.py  main.py  models.py  state.py  text.py  zotero_client.py
src/zotero_digest/matchers/: __init__.py  keywords.py  ranker.py
src/zotero_digest/sources/: __init__.py  arxiv_client.py
tests/: test_config.py  test_digest.py  test_state.py
